# PixelVita

./: .classpath  .gitignore  .project  PROJECT_PLAN.md  README.md  build.gradle.kts  gradle.env  gradle.properties  proguard-rules.pro  settings.gradle.kts
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/schemas/com.example.androiddiffusion.data.AppDatabase/: 2.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/tokenizer/: merges.txt  vocab.json
app/src/main/cpp/: CMakeLists.txt  intellisense_test.cpp  memory_manager.cpp  memory_manager.h  native_optimizations.cpp
app/src/main/cpp/include/: native_optimizations.h
app/src/main/java/com/example/androiddiffusion/: DiffusionApplication.kt  IntelliSenseTestActivity.java  MainActivity.kt  ui
app/src/main/java/com/example/androiddiffusion/config/: MemoryManager.kt  ModelConfig.kt  NativeOptimizations.kt  QuantizationInfo.kt  QuantizationType.kt  SchedulerType.kt  SystemRequirements.kt  UnifiedMemoryManager.kt
app/src/main/java/com/example/androiddiffusion/data/: AppDatabase.kt  Converters.kt  DiffusionModel.kt  DiffusionModelDao.kt  DownloadStatus.kt  ModelDownloadManager.kt  ModelRepository.kt  ModelType.kt
app/src/main/java/com/example/androiddiffusion/data/dao/: DiffusionModelDao.kt  ModelDao.kt
app/src/main/java/com/example/androiddiffusion/data/db/: AppDatabase.kt
app/src/main/java/com/example/androiddiffusion/data/state/: GenerationState.kt  (+1 more)
app/src/main/java/com/example/androiddiffusion/di/: AppModule.kt  DatabaseModule.kt  ImageManagerEntryPoint.kt  NetworkModule.kt  RepositoryModule.kt
app/src/main/java/com/example/androiddiffusion/ml/: NativeOptimizations.java
app/src/main/java/com/example/androiddiffusion/network/: ModelApi.kt
app/src/main/java/com/example/androiddiffusion/repository/: DiffusionRepository.kt  DiffusionRepositoryImpl.kt  ModelRepository.kt  ModelRepositoryImpl.kt
app/src/main/java/com/example/androiddiffusion/service/: ModelLoadingService.kt
app/src/main/java/com/example/androiddiffusion/ui/: MainScreen.kt
app/src/main/java/com/example/androiddiffusion/util/: ActivityLifecycleCallback.kt  AppError.kt  DownloadException.kt  ErrorHandler.kt  FileManager.kt  ImageManager.kt  ImageSaver.kt  ImageUtils.kt  Logger.kt  MemoryLeakDetector.kt  NativeMemoryManager.kt  NativeOptimizer.kt  NotificationManager.kt  OrtSessionExtensions.kt  PerformanceMetrics.kt  PerformanceProfiler.kt  PermissionHelper.kt
app/src/main/java/com/example/androiddiffusion/viewmodel/: GenerateViewModel.kt  MainViewModel.kt
app/src/main/python/: memory_profiler.py  optimize_all_models.sh  optimize_model.py  requirements.txt  test_optimized_models.py
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/layout/: activity_intellisense_test.xml
app/src/main/res/menu/: developer_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
app/src/test/java/com/example/androiddiffusion/: JavaConfigTest.java
app/src/test/java/com/example/androiddiffusion/config/: UnifiedMemoryManagerTest.kt
app/src/test/java/com/example/androiddiffusion/ml/: MemoryManagerTest.kt
app/src/test/java/com/example/androiddiffusion/ui/: PromptResultComposeTest.kt
app/src/test/java/com/example/androiddiffusion/util/: PerformanceProfilerTest.kt
app/src/test/resources/model/: unet.onnx
gradle/: libs.versions.toml
scripts/: benchmark_schedulers.py  convert_sd35_medium.py  convert_sd_turbo.py  convert_sdxl.py  download_sd35_medium.py  model_config.json  requirements.txt  sd_turbo_config.json
(+39 files in other folders)
